force-app/main/default/objects/Pesquisa__c/fields/Quais_tipos_de_ve_culos_da_frota__c.field-meta.xml
<CustomField>
    <fullName>Quais_tipos_de_ve_culos_da_frota__c</fullName>
    <label>Quais tipos de veículos da frota?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caminhão</fullName>
            </value>
            <value>
                <fullName>Carreta</fullName>
            </value>
            <value>
                <fullName>Cavalo</fullName>
            </value>
            <value>
                <fullName>Ônibus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>