force-app/main/default/objects/Pesquisa__c/fields/Qual_embarcador__c.field-meta.xml
<CustomField>
    <fullName>Qual_embarcador__c</fullName>
    <label>Qual embarcador?</label>
    <type>TextArea</type>
</CustomField>