force-app/main/default/objects/Pesquisa__c/fields/Qual_tamanho_da_frota_que_rastreada__c.field-meta.xml
<CustomField>
    <fullName>Qual_tamanho_da_frota_que_rastreada__c</fullName>
    <label>Qual tamanho da frota que é rastreada?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>