force-app/main/default/objects/Pesquisa__c/fields/Qual_tipo_produto_transportado__c.field-meta.xml
<CustomField>
    <fullName>Qual_tipo_produto_transportado__c</fullName>
    <label>Qual é o tipo de produto transportado?</label>
    <type>TextArea</type>
</CustomField>