force-app/main/default/objects/Pesquisa__c/fields/Quantidade_cancelamentos_solicitados__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_cancelamentos_solicitados__c</fullName>
    <label>Quantidade cancelamentos solicitados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>