force-app/main/default/objects/Pesquisa__c/fields/Quantidade_de_OS_Abertas__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_OS_Abertas__c</fullName>
    <label>Quantidade de OS Abertas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>