force-app/main/default/objects/Pesquisa__c/fields/Ramo_atividade__c.field-meta.xml
<CustomField>
    <fullName>Ramo_atividade__c</fullName>
    <formula>TEXT(Nome_da_Conta__r.Ramo_de_Atividade__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ramo de atividade</label>
    <type>Text</type>
</CustomField>