force-app/main/default/objects/Pesquisa__c/fields/Razao_Social__c.field-meta.xml
<CustomField>
    <fullName>Razao_Social__c</fullName>
    <formula>Nome_da_Conta__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Razão Social</label>
    <type>Text</type>
</CustomField>