force-app/main/default/objects/Pesquisa__c/fields/Regional__c.field-meta.xml
<CustomField>
    <fullName>Regional__c</fullName>
    <formula>TEXT(Owner:User.Regional__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regional</label>
    <type>Text</type>
</CustomField>