force-app/main/default/objects/Pesquisa__c/fields/Responsavel_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_Cliente__c</fullName>
    <label>Responsável Cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>