force-app/main/default/objects/Pesquisa__c/fields/Responsavel_Tipo__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_Tipo__c</fullName>
    <label>Responsável Tipo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>