force-app/main/default/objects/Pesquisa__c/fields/Se_sim_quem__c.field-meta.xml
<CustomField>
    <fullName>Se_sim_quem__c</fullName>
    <label>Se sim, quem? </label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUTOTRAC</fullName>
            </value>
            <value>
                <fullName>ITURAN</fullName>
            </value>
            <value>
                <fullName>POSITRON</fullName>
            </value>
            <value>
                <fullName>ZATIX</fullName>
            </value>
            <value>
                <fullName>ONIX</fullName>
            </value>
            <value>
                <fullName>POINTER</fullName>
            </value>
            <value>
                <fullName>GOLSAT</fullName>
            </value>
            <value>
                <fullName>PORTO SEGURO</fullName>
            </value>
            <value>
                <fullName>TRACKER</fullName>
            </value>
            <value>
                <fullName>BYSAT</fullName>
            </value>
            <value>
                <fullName>CARSYSTEM</fullName>
            </value>
            <value>
                <fullName>LINK</fullName>
            </value>
            <value>
                <fullName>OUTRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>