force-app/main/default/objects/Pesquisa__c/fields/Seguradora__c.field-meta.xml
<CustomField>
    <fullName>Seguradora__c</fullName>
    <label>Seguradora</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACE</fullName>
            </value>
            <value>
                <fullName>AIG</fullName>
            </value>
            <value>
                <fullName>Allianz</fullName>
            </value>
            <value>
                <fullName>Argo</fullName>
            </value>
            <value>
                <fullName>Bradesco</fullName>
            </value>
            <value>
                <fullName>Chubb</fullName>
            </value>
            <value>
                <fullName>Generali Brasil</fullName>
            </value>
            <value>
                <fullName>HDI</fullName>
            </value>
            <value>
                <fullName>Itaú</fullName>
            </value>
            <value>
                <fullName>Liberty</fullName>
            </value>
            <value>
                <fullName>Mapfre</fullName>
            </value>
            <value>
                <fullName>Nenhuma</fullName>
            </value>
            <value>
                <fullName>Outra</fullName>
            </value>
            <value>
                <fullName>Porto Seguro</fullName>
            </value>
            <value>
                <fullName>Royal &amp; Sunalliance</fullName>
            </value>
            <value>
                <fullName>SulAmérica</fullName>
            </value>
            <value>
                <fullName>Tokio Marine</fullName>
            </value>
            <value>
                <fullName>Yasuda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>