force-app/main/default/objects/Pesquisa__c/fields/Situa_o_da_Frota__c.field-meta.xml
<CustomField>
    <fullName>Situa_o_da_Frota__c</fullName>
    <label>Situação da Frota</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Redução da Frota</fullName>
            </value>
            <value>
                <fullName>Aumento da Frota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>