force-app/main/default/objects/Pesquisa__c/fields/Status_de_fatura__c.field-meta.xml
<CustomField>
    <fullName>Status_de_fatura__c</fullName>
    <label>Status de fatura</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Em aberto</fullName>
            </value>
            <value>
                <fullName>Ok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>