force-app/main/default/objects/Pesquisa__c/fields/Taxa_de_instalacao__c.field-meta.xml
<CustomField>
    <fullName>Taxa_de_instalacao__c</fullName>
    <label>Taxa de instalação</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>