force-app/main/default/objects/Pesquisa__c/fields/Tem_agregados__c.field-meta.xml
<CustomField>
    <fullName>Tem_agregados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tem agregados?</label>
    <type>Checkbox</type>
</CustomField>