force-app/main/default/objects/Pesquisa__c/fields/Tem_gerenciadora_de_risco__c.field-meta.xml
<CustomField>
    <fullName>Tem_gerenciadora_de_risco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tem gerenciadora de risco?</label>
    <type>Checkbox</type>
</CustomField>