force-app/main/default/objects/Pesquisa__c/fields/Termo_abaixo_alcada__c.field-meta.xml
<CustomField>
    <fullName>Termo_abaixo_alcada__c</fullName>
    <label>Termo abaixo alçada</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>