force-app/main/default/objects/Pesquisa__c/fields/Ticket_Concorrente__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Concorrente__c</fullName>
    <label>Ticket do Concorrente</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>