force-app/main/default/objects/Pesquisa__c/fields/Ticket_negociado__c.field-meta.xml
<CustomField>
    <fullName>Ticket_negociado__c</fullName>
    <label>Ticket negociado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>