force-app/main/default/objects/Pesquisa__c/fields/Tipo_conta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_conta__c</fullName>
    <formula>TEXT(Nome_da_Conta__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo da conta</label>
    <type>Text</type>
</CustomField>