force-app/main/default/objects/Pesquisa__c/fields/Tipo_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_cliente__c</fullName>
    <label>Tipo de cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Embarcador</fullName>
            </value>
            <value>
                <fullName>Transportador</fullName>
            </value>
            <value>
                <fullName>Agragado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>