force-app/main/default/objects/Pesquisa__c/fields/TM__c.field-meta.xml
<CustomField>
    <fullName>TM__c</fullName>
    <label>Ticket Total Minimo</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>