force-app/main/default/objects/Pesquisa__c/fields/Total_recuperavel__c.field-meta.xml
<CustomField>
    <fullName>Total_recuperavel__c</fullName>
    <label>Total recuperável</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>