force-app/main/default/objects/Pesquisa__c/fields/UF__c.field-meta.xml
<CustomField>
    <fullName>UF__c</fullName>
    <formula>TEXT(Nome_da_Conta__r.Enderecos_Principal_UF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UF</label>
    <type>Text</type>
</CustomField>