force-app/main/default/objects/Pesquisa__c/fields/UF_Lead__c.field-meta.xml
<CustomField>
    <fullName>UF_Lead__c</fullName>
    <formula>Lead__r.UF_sg__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UF</label>
    <type>Text</type>
</CustomField>