force-app/main/default/objects/Pesquisa__c/fields/Utiliza_escolta__c.field-meta.xml
<CustomField>
    <fullName>Utiliza_escolta__c</fullName>
    <label>Utiliza escolta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>