force-app/main/default/objects/Pesquisa__c/fields/Valor_do_acordo__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_acordo__c</fullName>
    <label>Valor do acordo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>