force-app/main/default/objects/Pesquisa__c/recordTypes/Cliente_da_Base.recordType-meta.xml
<RecordType>
    <fullName>Cliente_da_Base</fullName>
    <active>true</active>
    <label>Cliente da Base</label>
</RecordType>