force-app/main/default/objects/Pesquisa__c/recordTypes/Novo_Cliente.recordType-meta.xml
<RecordType>
    <fullName>Novo_Cliente</fullName>
    <active>true</active>
    <label>Novo Cliente</label>
</RecordType>