force-app/main/default/objects/Pesquisa__c/recordTypes/Pesquisa_campo.recordType-meta.xml
<RecordType>
    <fullName>Pesquisa_campo</fullName>
    <active>true</active>
    <label>Pesquisa de campo</label>
</RecordType>