force-app/main/default/objects/Pesquisa__c/recordTypes/Plano_Conquista.recordType-meta.xml
<RecordType>
    <fullName>Plano_Conquista</fullName>
    <active>true</active>
    <label>Plano Conquista</label>
</RecordType>