force-app/main/default/objects/Pesquisa__c/recordTypes/Plano_Conquista2_CT.recordType-meta.xml
<RecordType>
    <fullName>Plano_Conquista2_CT</fullName>
    <active>true</active>
    <label>Plano Conquista (CT)</label>
</RecordType>