force-app/main/default/objects/Pesquisa__c/recordTypes/Renegociacao.recordType-meta.xml
<RecordType>
    <fullName>Renegociacao</fullName>
    <active>true</active>
    <label>Fenatran 2017</label>
</RecordType>