force-app/main/default/objects/Pesquisa__c/validationRules/Campo_outros_concorrentes_obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Campo_outros_concorrentes_obrigatorio</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Concorrente__c  , &#39;Outros&#39;),
 ISBLANK(Outros_concorrentes__c )
)</errorConditionFormula>
    <errorDisplayField>Outros_concorrentes__c</errorDisplayField>
    <errorMessage>Preencha com pelo menos um concorrente  neste campo.</errorMessage>
</ValidationRule>